Changes for 1.7.0

 - [DEV-247] added enhancement to the Graph function (Artem)
 - [DEV-233,DEV-237] added support of scheduled maintenance periods (Artem,Sasha)

Changes for 1.6.1

 - [ZBX-562] fixed improper host group delete action (Artem)
 - [ZBX-527] fixed possible poller crash (Sasha)
 - [ZBX-533] fixed incorrect SNMP string to float conversion (Sasha)
 - [ZBX-534] fixed problem with email messages for discovery events (Sasha)
 - [ZBX-540] DM: fixed sql error while processing configuration data (Sasha)
 - [ZBX-557] fixed wrong audit action for items enable/disable (Artem)
 - [ZBX-403] added support of commas in UserParameter's (Sasha)
 - [ZBX-541] fixed overwriting proxies on host import issue (Artem)
 - [ZBX-542] added processing of nextcheck for active checks (Sasha)
 - [ZBX-504] fixed date selector issue for log items in latest values screen (Artem)
 - [ZBX-529] removed links from dynamic screen graphs (Artem)
 - [ZBX-538] fixed wrong theme pick up in login screen issue (Artem)
 - [ZBX-536] fixed problem with "Unable to add performance counter" (Sasha)
 - [ZBX-535] added support of monitoring files larger than 2GB in windows (Sasha)
 - [ZBX-520] removed action condition "event ack" due to not supported (Artem)
 - [ZBX-480] fixed patches for sysmaps_links table (Sasha)
 - [ZBX-521] fixed problem in FreeBSD with threads in proc.num and proc.mem items (Sasha)
 - [DEV-238] added support of sec|#num for function count() (Sasha)
 - [DEV-238] added support of text items for function count() (Sasha)
 - [ZBX-471] fixed problem with graphs with big values (Artem)
 - [ZBX-501] fixed undefined values in server info screen (Artem)
 - [ZBX-469] fixed problem with linking extra graph (Artem)
 - [ZBX-495] fixed DB upgrade script when doing 1.1->1.4->1.6 (Alexei)
 - [ZBX-488] fixed memory leak in ZABBIX server code (Alexei)
 - [ZBX-500] added more debug information for icmpping processing (Sasha)