@@ -5,6 +5,7 @@ Changes for 1.7.0
 
 Changes for 1.6.1
 
+ - [ZBX-563] added support of user parameters with -t option (Sasha)
  - [ZBX-562] fixed improper host group delete action (Artem)
  - [ZBX-527] fixed possible poller crash (Sasha)
  - [ZBX-533] fixed incorrect SNMP string to float conversion (Sasha)
